--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -1,19 +1,12 @@
-# Scraping & API
 requests==2.31.0
 selenium==4.15.0
-
-# Database
 psycopg2-binary==2.9.9
 apache-airflow-providers-postgres>=5.10.0
 apache-airflow-providers-common-sql>=1.10.0
-
-# Data Science & ML
-pandas>=2.1.1
-pyarrow>=14.0.0
-numpy>=1.26.0
-matplotlib>=3.8.0
+pandas==2.1.1
+pyarrow==14.0.0
+numpy==1.26.0
+matplotlib==3.8.0
 scikit-learn==1.3.2
-mlflow>=2.10.0
-
-# Monitoring
-prometheus_client>=0.20.0
+mlflow==2.10.0
+prometheus_client==0.20.0
