--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,12 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pandas==2.1.1
-numpy==1.26.4
-psycopg2-binary==2.9.9
-prometheus-fastapi-instrumentator==6.1.0
-pytest==7.4.3
 httpx==0.25.1
+mlflow==2.10.0
+scikit-learn==1.3.2
+pandas==2.1.1
+numpy==1.26.0
+cloudpickle==3.0.0
+scipy==1.11.3
+prometheus-fastapi-instrumentator==6.1.0
+psycopg2-binary==2.9.9
+pytest==7.4.3
+uvicorn[standard]==0.24.0
