--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -7,6 +7,7 @@ on:
     branches: [ main, master, refactoring ]
 
 jobs:
+  # JOB 1 : Tests API (Python + Postgres)
   api:
     runs-on: ubuntu-latest
     services:
@@ -42,7 +43,10 @@ jobs:
         env:
           PGPASSWORD: password_test
         run: |
+          # Création de la base de données attendue par l'application
           psql -h localhost -U user_test -d postgres -c "CREATE DATABASE user_test;"
+          
+          # Configuration des tables et injection des données de test (Seed)
           for DB in db_test user_test; do
             echo "Configuring database: $DB"
             psql -h localhost -U user_test -d $DB -c "
@@ -53,6 +57,7 @@ jobs:
                 destination_code VARCHAR(3),
                 commercial_flight BOOLEAN
             );
+
             CREATE TABLE IF NOT EXISTS flight_dynamic (
                 callsign VARCHAR(10) NOT NULL,
                 icao24 VARCHAR(10) NOT NULL,
@@ -66,6 +71,7 @@ jobs:
                 unique_key TEXT NOT NULL,
                 CONSTRAINT pk_flight_dynamic_$DB PRIMARY KEY (unique_key)
             );
+
             CREATE TABLE IF NOT EXISTS live_data (
                 indice SERIAL,
                 request_id UUID NOT NULL,
@@ -93,6 +99,7 @@ jobs:
                     REFERENCES flight_dynamic(unique_key)
             );
             "
+            # Injection du seed SQL (indispensable pour les tests de prédiction)
             if [ -f api/tests/seed_data.sql ]; then
               psql -h localhost -U user_test -d $DB -f api/tests/seed_data.sql
             fi
@@ -109,6 +116,7 @@ jobs:
           export PYTHONPATH=$PYTHONPATH:$(pwd)
           python -m pytest -v api/tests/test_api.py
 
+  # JOB 2 : Validation Terraform
   terraform:
     runs-on: ubuntu-latest
     steps:
@@ -117,13 +125,14 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.5.0
-      - name: Terraform Init/Validate
+      - name: Terraform Init & Validate
         run: |
           cd terraform
           terraform init
           terraform validate
           terraform fmt -check
 
+  # JOB 3 : Validation Airflow (Correction Selenium incluse)
   airflow:
     runs-on: ubuntu-latest
     steps:
@@ -132,19 +141,29 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Install Airflow & Deps
+      - name: Install Airflow & Dependencies
         run: |
-          pip install "apache-airflow>=2.10.0" psycopg2-binary prometheus-client pandas pyarrow mlflow scikit-learn requests
+          python -m pip install --upgrade pip
+          pip install "apache-airflow>=2.10.0" \
+                      psycopg2-binary \
+                      prometheus-client \
+                      pandas \
+                      pyarrow \
+                      mlflow \
+                      scikit-learn \
+                      requests \
+                      selenium
       - name: Static DAG Load Test
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)/airflow/plugins
-          python -c "from airflow.models import DagBag; dagbag = DagBag(dag_folder='airflow/dags', include_examples=False); exit(1 if len(dagbag.import_errors) > 0 else 0)"
+          python -c "from airflow.models import DagBag; dagbag = DagBag(dag_folder='airflow/dags', include_examples=False); print('Import Errors:', dagbag.import_errors); exit(1 if len(dagbag.import_errors) > 0 else 0)"
 
+  # JOB 4 : Validation Docker Compose
   docker:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Validate Docker Compose
+      - name: Validate Docker Compose Config
         env:
           AIRFLOW_JWT_SECRET: "ci_static_secret_32_characters_long"
           AIRFLOW_FERNET_KEY: "ci_static_fernet_key_validation="
