--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -216,10 +216,17 @@ services:
       MODEL_NAME: ${MODEL_NAME}
     networks:
       - airflow_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthcheck"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     restart: always
 
   postgres-exporter:
     image: prometheuscommunity/postgres-exporter
+    ports:
+      - "9187:9187"
     environment:
       DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${AIRLINES_POSTGRES_DB}?sslmode=disable"
     networks:
@@ -241,6 +248,7 @@ services:
     ports:
       - "8081:8080"
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - /:/rootfs:ro
       - /var/run:/var/run:ro
       - /sys:/sys:ro
@@ -284,3 +292,20 @@ services:
       - ./airflow/data:/airflow_data
     command: >
       sh -c "chmod -R 777 /mlflow/artifacts && chmod -R 777 /airflow_data"
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    ports:
+      - "9100:9100"
+    restart: always
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    networks:
+      - airflow_network
