--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,7 +4,11 @@ global:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
+
+  - job_name: 'pc-host'
+    static_configs:
+      - targets: ['node-exporter:9100']
 
   - job_name: 'docker-metrics'
     static_configs:
