dev : add airflow metrics

--- a/airflow/config/airflow.cfg
+++ b/airflow/config/airflow.cfg
@@ -9,6 +9,11 @@ broker_url = redis://redis:6379/0
 result_backend = db+postgresql://airflow:airflow@postgres/airflow
 
 [scheduler]
-# Très utile pour éviter que le scheduler ne sature ton CPU sur Windows
 child_process_log_directory = /opt/airflow/logs/scheduler
 dag_dir_list_interval = 30
+
+[metrics]
+statsd_on = True
+statsd_host = statsd-exporter
+statsd_port = 9125
+statsd_prefix = airflow
