--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -26,3 +26,7 @@ scrape_configs:
     honor_labels: true
     static_configs:
       - targets: ['pushgateway:9091']
+
+  - job_name: 'airflow-statsd'
+    static_configs:
+      - targets: ['statsd-exporter:9102']
