--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,9 @@ volumes:
   grafana_data:
     external: true
     name: grafana-data-terraform
+  prometheus_data:
+    external: true
+    name: prometheus-data-terraform
 
 x-airflow-common:
   &airflow-common
@@ -274,6 +277,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
+      - prometheus_data:/prometheus
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     networks:
       - airflow_network
