--- a/grafana/provisioning/dashboards/dashboards.yaml
+++ b/grafana/provisioning/dashboards/dashboards.yaml
@@ -1,11 +1,30 @@
 apiVersion: 1
 
 providers:
-  - name: 'dst_airlines'
+  - name: '1 - Infrastructure'
     orgId: 1
-    folder: ''
+    folder: '1 - Infrastructure' # Nom du dossier dans l'interface Grafana
     type: file
-    disableDeletion: false
-    updateIntervalSeconds: 30
     options:
-      path: /etc/grafana/dashboards
+      path: /etc/grafana/dashboards/1_infrastructure.json
+
+  - name: '2 - Airflow'
+    orgId: 1
+    folder: '2 - Airflow'
+    type: file
+    options:
+      path: /etc/grafana/dashboards/2_airflow.json
+
+  - name: '3 - ETL Pipeline'
+    orgId: 1
+    folder: '3 - ETL Pipeline'
+    type: file
+    options:
+      path: /etc/grafana/dashboards/3_etl.json
+
+  - name: '4 - Machine Learning'
+    orgId: 1
+    folder: '4 - Machine Learning'
+    type: file
+    options:
+      path: /etc/grafana/dashboards/4_ml.json
